{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 12,
  "lineage": "316b20fb-0b34-2af2-0aaa-18a51d03b4fa",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2025-11-05T06:40:55.703-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/inspired-berm-477311-d1/global/firewalls/startup-allow-egress",
            "log_config": [],
            "name": "startup-allow-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/inspired-berm-477311-d1/global/networks/startup-vpc",
            "priority": 1000,
            "project": "inspired-berm-477311-d1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/inspired-berm-477311-d1/global/firewalls/startup-allow-egress",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_nodeport",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "30080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-05T06:40:55.453-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/inspired-berm-477311-d1/global/firewalls/startup-allow-http-30080",
            "log_config": [],
            "name": "startup-allow-http-30080",
            "network": "https://www.googleapis.com/compute/v1/projects/inspired-berm-477311-d1/global/networks/startup-vpc",
            "priority": 1000,
            "project": "inspired-berm-477311-d1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/inspired-berm-477311-d1/global/firewalls/startup-allow-http-30080",
            "source_ranges": [
              "94.229.46.41/32"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "startup-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-05T06:40:55.453-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/inspired-berm-477311-d1/global/firewalls/startup-allow-ssh",
            "log_config": [],
            "name": "startup-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/inspired-berm-477311-d1/global/networks/startup-vpc",
            "priority": 1000,
            "project": "inspired-berm-477311-d1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/inspired-berm-477311-d1/global/firewalls/startup-allow-ssh",
            "source_ranges": [
              "94.229.46.41/32"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "startup-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/inspired-berm-477311-d1/global/networks/startup-vpc",
            "mtu": 0,
            "name": "startup-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "6665879685599518478",
            "project": "inspired-berm-477311-d1",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/inspired-berm-477311-d1/global/networks/startup-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-11-05T06:40:58.638-08:00",
            "gateway_address": "10.20.0.1",
            "id": "projects/inspired-berm-477311-d1/regions/europe-central2/subnetworks/startup-public-subnet",
            "ip_cidr_range": "10.20.0.0/24",
            "name": "startup-public-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/inspired-berm-477311-d1/global/networks/startup-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "inspired-berm-477311-d1",
            "purpose": "PRIVATE",
            "region": "europe-central2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/inspired-berm-477311-d1/regions/europe-central2/subnetworks/startup-public-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}